fix - build error fix 1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cool",
-  "description": "A showcase for cool",
+  "name": "showcase",
+  "description": "Showcase Website",
   "author": "Shuaib Abdulrazaq (https://github.com/Zhaqyy)",
   "type": "module",
   "dependencies": {
