--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "sass-embedded": "^1.83.1",
+    "terser": "^5.43.1",
     "vite": "^5.0.12"
   },
   "scripts": {
