--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "9.122.0",
     "@react-three/fiber": "8.18.0",
+    "@react-three/postprocessing": "^3.0.4",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "leva": "^0.10.0",
